@@ -69,9 +69,9 @@ uint32_t MurmurHash2 ( const void * key, int len, uint32_t seed )
 
   switch(len)
   {
-  case 3: h ^= data[2] << 16;
-  case 2: h ^= data[1] << 8;
-  case 1: h ^= data[0];
+  case 3: h ^= data[2] << 16;	/* fallthrough */
+  case 2: h ^= data[1] << 8;	/* fallthrough */
+  case 1: h ^= data[0];			/* fallthrough */
       h *= m;
   };
 
